2006-01-04	 Gaius Mulley <gaius@glam.ac.uk>

	* implemented module priorities.
	* implemented gm2/gm2-libs-pim/TimeDate.mod
	* added testsuite/gm2/pimlib/coroutines/pass/priority.mod,
          testsuite/gm2/pimlib/coroutines/pass/priority2.mod and
          testsuite/gm2/pimlib/logitech/run/pass/timedate.mod
	* included TimeDate to be installed as part of the pim
	  libraries.

2006-01-03	 Gaius Mulley <gaius@glam.ac.uk>

	* fixed typo in gm2/gm2.texi
	
2006-01-03	 Michael H Lambert <lambert@psc.edu>

	* added __ppc__ ifdefs into testsuite/gm2/iso/pass/realbitscast.mod
          so that it ignores the REAL96 test on the G5
	* added __ppc__ ifdefs into testsuite/gm2/switches/pim4/run/pass/FpuIOBug.mod

2005-12-29      Gaius Mulley <gaius@glam.ac.uk>
		
	* corrections made to gm2/gm2.texi

2005-12-24      Gaius Mulley <gaius@glam.ac.uk>

	* joined lines in gm2/tools-src/createUlmSys as
	  requested by Christoph <modula2@myrealbox.com>
	  so that gm2 will build on netbsd 2.1.
	* added time and tm to gm2/gm2-libs/libc.def.
	* added partial implementation of
	  gm2/gm2-libs-pim/TimeDate.def
          gm2/gm2-libs-pim/TimeDate.mod

2005-12-22      Gaius Mulley <gaius@glam.ac.uk>

	* added gm2/gm2-libs-pim/Random.def and
          gm2/gm2-libs-pim/Random.mod and
	* modified gm2/Make-lang.in to install new module.
	* remove Random from the TODO list.

2005-12-21      Gaius Mulley <gaius@glam.ac.uk>

	* added gm2/gm2-libs-pim/Strings.def and
          gm2/gm2-libs-pim/Strings.mod
 	* modified gm2/Make-lang.in to install new module.

2005-12-19      Gaius Mulley <gaius@glam.ac.uk>

	* implemented logitech compatible library
	  gm2/gm2-libs-pim/RealConversions.def and
          gm2/gm2-libs-pim/RealConversions.mod
	* added regression test for RealConversions
	  testsuite/gm2/pimlib/logitech/run/pass/realconv.mod
	* fixed regression test expect script to set the
	  library path correctly.
	* updated gm2/gm2-libs.texi to reflect addition of
	  RealConversions.mods