@@ -67,4 +67,4 @@ stagestuff="gm2\$(exeext) cc1gm2\$(exeext) gm2l\$(exeext) \
 
 gtfiles="\$(srcdir)/gm2/gccgm2.c \$(srcdir)/gm2/gm2-lang.c \$(srcdir)/gm2/gm2-lang.h \$(srcdir)/c-common.h"
 
-outputs="gm2/Makefile gm2/p2c/Makefile gm2/p2c/p2c-src/Makefile gm2/p2c/p2c-src/src/Makefile gm2/p2c/p2c-src/examples/Makefile gm2/man/Makefile"
+outputs="gm2/Makefile gm2/p2c/Makefile gm2/p2c/p2c-src/Makefile gm2/p2c/p2c-src/src/Makefile gm2/man/Makefile"
