@@ -2239,8 +2239,8 @@ BEGIN
                                             (* visable within this scope.    *)
                                             (* Outer Module.                 *)
          InitTree(NamedObjects) ;           (* Names of all items declared.  *)
-         InitTree(NamedImports) ; 
-         InitTree(WhereImported) ;          (* Names of items imported.      *)
+         InitTree(NamedImports) ;           (* Names of items imported.      *)
+         InitTree(WhereImported) ;          (* Sym to TokenNo where import   *)
                                             (* occurs. Error message use.    *)
          Priority := NulSym ;               (* Priority of the module. This  *)
                                             (* is an index to a constant.    *)
@@ -2341,7 +2341,7 @@ BEGIN
                                             (* visable within this scope.    *)
             InitTree(NamedObjects) ;        (* Names of all items declared.  *)
             InitTree(NamedImports) ;        (* Names of items imported.      *)
-            InitTree(WhereImported) ;       (* Names of items imported.      *)
+            InitTree(WhereImported) ;       (* Sym to TokenNo where import   *)
                                             (* occurs. Error message use.    *)
             Priority := NulSym ;            (* Priority of the module. This  *)
                                             (* is an index to a constant.    *)
@@ -2452,7 +2452,7 @@ BEGIN
                                       (* visable within this scope.    *)
          InitTree(NamedObjects) ;     (* names of all items declared.  *)
          InitTree(NamedImports) ;     (* Names of items imported.      *)
-         InitTree(WhereImported) ;    (* Names of items imported.      *)
+         InitTree(WhereImported) ;    (* Sym to TokenNo where import   *)
                                       (* occurs. Error message use.    *)
          Priority := NulSym ;         (* Priority of the module. This  *)
                                       (* is an index to a constant.    *)
